--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-Django~=3.2.10
-
+asgiref==3.4.1
+Django==3.2.16
+et-xmlfile==1.1.0
+numpy==1.19.5
+openpyxl==3.0.10
+pandas==1.1.5
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
+sqlparse==0.4.3
+typing-extensions==4.1.1
+xlrd==1.2.0
